--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         dotnet-version: 3.1.301
     - name: Install dependencies
-      run: dotnet restore /src/Gcsb.NSwag.Configuration.csproj
+      run: dotnet restore /src/Gcsb.NSwag.Configuration/Gcsb.NSwag.Configuration.csproj
     - name: Build
       run: dotnet build --configuration Release --no-restore
     - name: Test
