--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - name: Local
-      run: pwd & cd .. & pwd
+      run: pwd & cd .. & ls -lhart
     - uses: actions/checkout@v2
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
