--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -12,8 +12,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Local ls
+      run: ls -lhart
     - name: Local
-      run: pwd & cd .. & ls -lhart
+      run: ls -la ./src/Gcsb.NSwag.Configuration
     - uses: actions/checkout@v2
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
