--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -13,9 +13,9 @@ jobs:
 
     steps:
     - name: Local ls
-      run: ls -lhart ../
+      run: pwd
     - name: Local
-      run: ls -la ../../
+      run: ls -la ./src
     - uses: actions/checkout@v2
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
