--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -35,4 +35,9 @@ jobs:
     - name: Build solution and generate NuGet package
       run: |  
         cd $GITHUB_WORKSPACE/src/Gcsb.NSwag.Configuration/
-        dotnet pack -c Release -o out 
+        dotnet pack -c Release -o out
+        
+    - name: Push generated package to GitHub registry
+      run: |  
+        cd $GITHUB_WORKSPACE/src/Gcsb.NSwag.Configuration/
+        dotnet nuget push out/*.nupkg --skip-duplicate --no-symbols true
