--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -21,6 +21,9 @@ jobs:
         dotnet-version: 3.1.301
       env:
           NUGET_AUTH_TOKEN: ${{secrets.GH_TOKEN}}
+          
+    - name: Teste variavel
+      run: echo $NUGET_AUTH_TOKEN
 
     - name: Install dependencies
       run: |  
